--- a/site/config.toml
+++ b/site/config.toml
@@ -7,7 +7,7 @@ title = "Blox"
 
 [params]
   defaultLogo = "https://www.netlify.com/img/press/logos/logomark.svg"
-  faviconsPath = "/images/favicon/"
+  faviconsPath = ""
 
 # List of systems monitored in this status page.
 # You'll be able to change their status every time
