--- a/site/config.toml
+++ b/site/config.toml
@@ -13,4 +13,4 @@ title = "Blox"
 # You'll be able to change their status every time
 # you open or update an incident.
 # Replace these examples with your own system names.
-systems = ["Gamesss", "Website", "Forums", "World Creation"]
+systems = ["Gamessssssss", "Website", "Forums", "World Creation"]
